syntax = "proto3";

option csharp_namespace = "ToDoGrpc.Client";

package todoit;

service ToDoIt {
  // Create
  rpc CreateToDo(CreateToDoRequest) returns (CreateToDoResponse) { }

  // Get Item
  rpc GetToDoItem(GetToDoItemRequest) returns (GetToDoItemResponse) { }

  // Get List
  rpc GetToDoList(GetToDoListRequest) returns (GetToDoListResponse) { }

  // Update
  rpc UpdateToDo(UpdateToDoRequest) returns (UpdateToDoResponse) { }

  // Delete
  rpc DeleteToDo(DeleteToDoRequest) returns (DeleteToDoResponse) { }
}

message CreateToDoRequest {
  string title = 1;
  string description = 2;
}

message CreateToDoResponse {
  int32 id = 1;
}

message GetToDoItemRequest {
  int32 id = 1;
}

message GetToDoItemResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  bool is_complete = 4;
}

message GetToDoListRequest {}

message GetToDoListResponse {
  repeated GetToDoItemResponse items = 1;
}

message UpdateToDoRequest {
  int32 id = 1;
  string title = 2;
  string description = 3;
  bool is_complete = 4;
}

message UpdateToDoResponse {
  bool success = 1;
}

message DeleteToDoRequest {
  int32 id = 1;
}

message DeleteToDoResponse {
  bool success = 1;
}